批量修改文件名

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "howtostartopensource",
+  "name": "open-blog",
   "version": "1.0.0",
   "description": "How to Start Open Source",
   "type": "module",
