--- a/.cnb/workflows/sync-to-github.yml
+++ b/.cnb/workflows/sync-to-github.yml
@@ -14,5 +14,5 @@ main:
             auth_type: https
             username: ${GIT_USERNAME}
             password: ${GIT_ACCESS_TOKEN}
-            target_url: https://github.com/eryajf/HowToStartOpenSource.git
+            target_url: https://github.com/eryajf/open-blog.git
             git_email: 'github-actions[bot]@users.noreply.github.com'
